plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

bootJar.enabled = false

repositories {
    mavenCentral()
}

subprojects {
    group 'com.ittory'
    version '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        runtimeOnly 'com.h2database:h2'

        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.withType(ProcessResources) {
        from(rootProject.file('env')) {
            include '.env'
            into 'env'
        }
    }

    test {
        useJUnitPlatform()
    }
}